--- a/test-0/requirements.txt
+++ b/test-0/requirements.txt
@@ -6,3 +6,8 @@ chardet==3.0.4
 click==7.1.2
 cryptography==2.6.1
 requests==2.24.0
+entrypoints==0.3
+Flask==1.1.2
+Flask-Cors==3.0.8
+idna==2.10
+itsdangerous==1.1.0
