--- a/.github/workflows/fossa-multi-dir.yml
+++ b/.github/workflows/fossa-multi-dir.yml
@@ -1,6 +1,7 @@
 name: FOSSA CLI Analysis + Test
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
+  # test
   push:
     branches: [ main ]
   pull_request:
