--- a/.github/workflows/fossa-multi-dir.yml
+++ b/.github/workflows/fossa-multi-dir.yml
@@ -28,28 +28,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
   
-#       - name: Running FOSSA CLI
-#         run: |
-#           curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install-latest.sh | bash
-#           fossa --version
-          
-#           if ! fossa analyze ${{ matrix.directory }}; then
-#               echo "FOSSA analysis not successful"
-#               exit 1
-#           fi
-      - uses: fossas/fossa-action@main # Use a specific version if locking is preferred
-        id: fossa-analyze
-        with:
-          api-key: ${{secrets.FOSSA_API_KEY}}
-
-#       - uses: fossas/fossa-action@main # Use a specific version if locking is preferred
-#         id: fossa-test
-#         with:
-#           api-key: ${{secrets.FOSSA_API_KEY}}
-#           run-tests: true
-
-      - name: Running FOSSA CLI test with json output
+      - name: Running FOSSA CLI
         run: |
           curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install-latest.sh | bash
           fossa --version
-          fossa test --json | jq '.issues[] | select(.type == "vulnerability" and .status == "new" and .depth < 3)'
+          fossa analyze ${{ matrix.directory }}
