--- a/.github/workflows/fossa-multi-dir.yml
+++ b/.github/workflows/fossa-multi-dir.yml
@@ -1,29 +1,19 @@
 name: FOSSA CLI Analysis + Test
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  # test
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  # tesitnglkfjdsf
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
       FOSSA_API_KEY: ${{secrets.FOSSA_API_KEY}}
 
     strategy:
       fail-fast: false
-      matrix:
-        directory: [ 'test-0', 'test-1', 'test-3', 'test-4', 'test-5'  ]
 
     steps:
       - uses: actions/checkout@v3
@@ -32,5 +22,9 @@ jobs:
         run: |
           curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install-latest.sh | bash
           fossa --version
-          fossa analyze ${{ matrix.directory }}
+          fossa analyze
+
+      - name: Running FOSSA Test
+        run: |
+          fossa --version
           fossa test
